# quilt-native-installer

./: .gitignore  Cargo.toml  Cross.toml  Readme.md
.github/workflows/: check.yml  release.yml
scripts/: mac_package.sh
src/: cli.rs  gui.rs  installer.rs  main.rs
