[package]
name = "quilt-installer"
description = "The installer for quilt-loader"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
iced = { version = "0.6", default-features = false, features = [
    "glow",
    "tokio",
] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
native-dialog = "0.6"
dark-light = "0.2"
serde_json = "1.0"
base64 = "0.13"
anyhow = "1.0"
png = "0.17"

[profile.release]
opt-level = "s"
strip = true
lto = true
