[package]
name = "quilt-installer"
description = "The installer for quilt-loader"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.20"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dark-light = "1.0"
iced = { version = "0.6", default-features = false, features = ["glow", "tokio"] }
native-dialog = "0.6"
png = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
