[package]
name = "quilt-installer"
description = "The installer for quilt-loader"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
dark-light = "1.0"
derive_more = "0.99"
iced = { version = "0.8", default-features = false, features = ["wgpu", "tokio"] }
# TODO: if we keep using this lib into the future, maybe we just fork it as Quilt?
native-dialog = { git = "https://github.com/TheGlitch76/native-dialog-rs", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
png = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.27"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
